feat: add more func and docs
